# open_two_wechat

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: main.yml
src/: App.vue  main.js  main.rs
src-tauri/: Cargo.toml  nohup.out  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: button.rs  discription.rs  footer.rs  header.rs  input_number.rs  mod.rs
